--- a/package.json
+++ b/package.json
@@ -2,25 +2,58 @@
   "name": "engineer-interview",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+  "description": "Engineer Interview Project for the Frontend Engineer position at Every.",
+  "author": {
+    "name": "Angel Arciniega",
+    "email": "mangel.arciniega@gmail.com",
+    "url": "https://github.com/AngelsProjects"
   },
+  "readme": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:AngelsProjects/engineer-interview.git"
+  },
+  "engines": {
+    "node": ">= 16.0.0"
+  },
+  "engineStrict": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
+    "format": "prettier --write src/**/*.{ts,tsx,css,scss}",
+    "format:check": "prettier --check src/**/*.{ts,tsx,css,scss}",
+    "coverage": "react-scripts test --coverage --watchAll=false"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "1.8.5",
+    "clsx": "1.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.34.2",
+    "react-redux": "8.0.2",
+    "uuid": "8.3.2",
+    "web-vitals": "3.0.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "7.5.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.0.0",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/uuid": "8.3.4",
+    "eslint": "8.23.0",
+    "prettier": "2.7.1",
+    "react-scripts": "5.0.1",
+    "sass": "1.54.8",
+    "typescript": "4.8.2"
   },
   "eslintConfig": {
     "extends": [
